--- a/public/offline/index.html
+++ b/public/offline/index.html
@@ -7,7 +7,18 @@
         <title>Offline - andDEVEL</title><meta name="description" content="andDEVEL&#39;s personal site"><meta name="application-name" content="andDEVEL">
 <meta name="apple-mobile-web-app-title" content="andDEVEL"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://anddevel.com/offline/" /><link rel="stylesheet" href="/css/home.min.css"></head><body><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script><div class="wrapper">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://anddevel.com/offline/" /><link rel="stylesheet" href="/css/home.min.css">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F25H2J3PPK"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-F25H2J3PPK', { 'anonymize_ip': false });
+}
+</script>
+</head><body><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script><div class="wrapper">
             <main class="main">
                 <div class="container"><article id="content-404">
         <h2>Offline</h2>
